// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LinkExternal /> component > should render the component in default state 1`] = `
<a
  class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineHover makeStyles-MuiTypography-root-MuiLink-root"
  href="/"
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`<LinkExternal /> component > should render the component with external link 1`] = `
<a
  class="MuiTypography-root MuiTypography-caption MuiLink-root MuiLink-underlineHover makeStyles-MuiTypography-root-MuiLink-root"
  href="https://example.com"
  rel="noopener noreferrer"
  target="_blank"
>
  Example
</a>
`;
